style.css
:root {
  --dark-purple: #2a2a34;
  --light-purple: #dfd8ea;
}

body {
  font-family: "Montserrat";
  margin: 0;
  padding-top: 2.813rem;
  overflow-x: hidden;
  min-height: calc(100vh - 2.813rem);
  display: flex;
  flex-direction: column;
}

/* GLOBAL */

/* Headings */

.h1,
.h2,
.h3 {
  font-weight: normal;
  text-transform: uppercase;
}

.h1 {
  font-size: 4.375rem;
}

.h2 {
  font-size: 2.5rem;
}

.h3 {
  font-size: 1.875rem;
}

p {
  margin: 0;
  font-size: 1rem;
}

.main-container {
  padding: 5rem;
  flex: 1;
}

.main-h1 {
  font-size: 2.5rem;
  text-transform: uppercase;
  hyphens: auto;
}

/* NAVIGATION */

.navbar {
  width: 100vw;
  display: flex;
  justify-content: flex-end;
  position: fixed;
  top: 0;
  z-index: 1;
  background: black;
  font-size: 1.5rem;
}

.navbar-light {
  background: white;
}

.navbar-light .nav-link {
  color: black;
}

.nav-list {
  display: flex;
  list-style-type: none;
  margin: 0;
  padding: 0 0.938rem;
}

.nav-link {
  display: block;
  color: white;
  text-align: center;
  padding: 0.875rem 1rem;
  text-decoration: none;
  text-transform: uppercase;
}

.nav-link:hover {
  cursor: pointer;
}

/* HOME */

/* Header */

.header-container {
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
}

.header-img {
  width: 100%;
}

.header-headlines {
  width: 80%;
  position: absolute;
  top: 50%;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-align: center;
  font-size: 1.3em;
  color: white;
}

.header-headlines h1 {
  font-family: "Montserrat";
  font-weight: 400;
}

.header-headlines h2 {
  font-family: "Tahoma";
}

.header-overlay {
  position: absolute;
  width: 125rem;
  left: 69vw;
  height: 125rem;
  transform: rotate(28deg);
  background: var(--dark-purple);
  bottom: -36.625rem;
}

/* Projects */

.projects-heading {
  width: 100vw;
  display: flex;
  flex-wrap: nowrap;
  align-items: center;
  margin-bottom: 5rem;
  border-bottom: 0.313rem solid var(--dark-purple);
}

.thinline {
  width: 16vw;
  height: 0.188rem;
  background-color: var(--dark-purple);
}

.projects-heading .h2 {
  margin-left: 1.25rem;
  color: var(--dark-purple);
}

.projects-row {
  display: flex;
  flex-direction: row;
  margin-top: 6.25rem;
  padding: 0 5rem;
  justify-content: flex-start;
}

.projects-row:first-child {
  margin-top: 0;
}

.projects-row:nth-child(odd) {
  justify-content: flex-end;
}

.project-container {
  width: 30vw;
  height: 35vw;
  position: relative;
  text-decoration: none;
  color: black;
}

.project-container + .project-container {
  margin: 5rem 0 0 7.188rem;
}

.project-background {
  position: absolute;
  width: 85%;
  height: 72%;
  background-color: var(--light-purple);
}

.project-content {
  display: flex;
  flex-direction: column;
  position: absolute;
  bottom: 0;
  right: 0;
  height: 100%;
  width: 85%;
}

.project-img {
  flex: 1;
}

.project-img img {
  width: 100%;
}

.project-info {
  margin-top: 0.375rem;
}

.project-info p {
  font-size: 1.25rem;
}

/* Termine */

.dates-container {
  display: flex;
  justify-content: flex-end;
  margin-top: 24vh;
}

.dates-content {
  width: 50%;
  background: var(--light-purple);
  padding: 2.813rem;
}

.dates-content h2 {
  margin-bottom: 2rem;
  margin-top: 0;
  font-size: 1.875rem;
}

.dates-list {
  padding: 0;
  margin: 0;
}

.dates-list li {
  list-style-type: none;
}

.dates-list li + li {
  margin-top: 2rem;
}

.dates-list li p {
  font-size: 1.25rem;
}

.dates-list li p + p {
  margin-top: 0.313rem;
}

/* Vita */

.vita-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  padding: 0 14vw 0 10vw;
  margin-top: 24vh;
  position: relative;
}

.vita-content {
  position: relative;
  width: 50%;
}

.vita-text {
  position: relative;
}

.vita-background {
  height: 50vh;
  width: 120vw;
  position: absolute;
  top: 0;
  bottom: 0;
  z-index: -1;
  background: var(--light-purple);
  transform: rotate(16deg);
  transform-origin: 35vh -65vw;
}

.vita-img {
  width: 50%;
  margin-left: 5vw;
}

.vita-img img {
  width: 100%;
}

/* Kontakt */

.contact-container {
  display: flex;
  flex-direction: row;
  padding-left: 10vw;
  margin-top: 14vh;
  margin-bottom: 14vh;
}

.contact-content {
  width: 50%;
}

.contact-content a {
  display: inline-block;
  margin-top: 0.625rem;
  color: black;
  text-decoration: none;
}

.contact-content a:hover {
  text-decoration: underline;
}

/* FOOTER */

.footer {
  width: 100vw;
  display: flex;
  justify-content: flex-end;
  background: transparent;
}

.footer-list {
  display: flex;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.footer-link {
  display: block;
  text-align: center;
  padding: 0.875rem 1rem;
  text-decoration: none;
  text-transform: uppercase;
  font-family: "Noto Serif";
  font-weight: bold;
  color: black;
}

.footer-link:hover {
  text-decoration: underline;
}

/* PROJECT DETAILPAGE*/

.link-back {
  margin-bottom: 0.625rem;
  font-size: 1rem;
}

.link-back a {
  color: black;
  text-decoration: none;
  margin-left: 0.625rem;
}

.link-back a:hover {
  text-decoration: underline;
  cursor: pointer;
}

.projectpage-container {
  display: flex;
}

.projectpage-container h1 {
  margin-top: 0;
}

.projectpage-content {
  width: 40%;
}

.projectpage-img {
  width: 60%;
  margin-left: 5vw;
}

.projectpage-img img {
  width: 100%;
}

.projectpage-img-gallery {
  display: flex;
  flex-wrap: wrap;
  padding: 0;
  justify-content: space-between;
  margin-top: 0.625rem;
}

.column {
  flex: 33%;
  max-width: 33%;
  display: flex;
  flex-direction: column;
}

.column:nth-child(2) {
  align-items: center;
}

.column:nth-child(3) {
  align-items: flex-end;
}

.column img {
  margin-top: 0.5rem;
  vertical-align: middle;
  width: calc(100% - 0.125rem);
}

/* DATENSCHUTZ */

.datenschutz-h2 {
  font-size: 1rem;
}

.datenschutz-h3 {
  font-size: 0.938rem;
}

.datenschutz-text,
.datenschutz-list {
  margin-bottom: 0.75rem;
  font-size: 0.875rem;
  font-style: normal;
}

/* IMPRESSUM */

.legal-address {
  margin-bottom: 1rem;
}

.legal-contact {
  margin-bottom: 3rem;
}

@media only screen and (max-width: 480px) {
  .h1 {
    font-size: 2rem;
    text-transform: uppercase;
  }

  .h2,
  .h3 {
    font-size: 1rem;
  }

  .nav-list {
    padding: 0rem;
    font-size: 1rem;
  }

  .main-container {
    padding: 0.625rem;
  }

  .header-overlay {
    display: none;
  }

  .projects-row {
    flex-wrap: wrap;
    padding: 0 0.625rem;
    margin-top: 0;
  }

  .project-container {
    width: 100%;
    height: 22.5rem;
    margin-top: 9.375rem;
  }

  .project-container + .project-container {
    margin-left: 0;
    margin-top: 9.375rem;
  }

  .projects-heading + .projects-row .project-container:first-child {
    margin-top: 0;
  }

  .project-content .h3 {
    hyphens: auto;
  }

  .dates-content {
    width: 100%;
  }

  .vita-container,
  .contact-container {
    padding-left: 1.875rem;
    flex-wrap: wrap;
  }

  .vita-content,
  .contact-content {
    width: 100%;
  }

  .vita-img {
    width: 100%;
    margin-left: 0;
    margin-top: 10px;
  }

  .vita-background {
    display: none;
  }

  .projectpage-container {
    flex-wrap: wrap;
  }

  .projectpage-content {
    width: 100%;
    margin-bottom: 2.188rem;
  }

  .projectpage-img {
    width: 100%;
    margin-left: 0;
  }

  .column {
    flex: 100%;
    max-width: 100%;
  }
}

